--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@
 {
   background-color: rgb(61, 61, 61);
   border-radius: 1em;
-  padding: 1em;
+  padding: 1em 2em;
 }
 
 
@@ -69,6 +69,7 @@
   display: flex;
   flex-wrap: nowrap;
   gap: 0.5em;
+  padding: 0;
 }
 
 .playingCard
